# Hugin

./: .cvsignore  .hgignore  .hgignore~  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Changelog.style  Changes.txt  HACKING  INSTALL  INSTALL_cmake  LICENCE_JHEAD  Makefile  Makefile.am  Makefile.in  NEWS  README  README_JP  README_WINDOWS  TODO  authors.txt  bootstrap  configure  configure.ac  windows_DOT_NET_compile.txt  windows_compile.txt
doc/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.pod2man  PTBatcher.pod  PTBatcherGUI.1  PTBatcherGUI.pod  align_image_stack.1  align_image_stack.pod  autooptimiser.1  autooptimiser.pod  autooptimizer.pod  autopano-noop.pod  autopano-noop.sh.pod  calibrate_lens.1  calibrate_lens.pod  calibrate_lens_gui.pod  celeste_standalone.1  celeste_standalone.pod  checkpto.1  checkpto.pod  cpclean.1  cpclean.pod  cpfind.1  cpfind.pod  deghosting_mask.1  deghosting_mask.pod  executor_file_format.txt  fulla.1  fulla.html  fulla.pod  geocpset.pod  hugin.1  hugin.pod  hugin_executor.pod  hugin_hdrmerge.1  hugin_hdrmerge.pod  hugin_lensdb.pod  hugin_stitch_project.1  hugin_stitch_project.pod  (+29 more)
doc/batch-processing/: Makefile.flickr.mk  Makefile.psd.mk  Makefile.qtvr.mk  README.batch
doc/releases/: hugin-0.8.0.txt  hugin-0.8.0_rc1.txt  hugin-0.8.0_rc2.txt  hugin-0.8.0_rc3.txt  hugin-0.8.0_rc4.txt  hugin-0.8.0_rc5.txt  hugin-2009.4.0.txt  hugin-2009.4.0_rc3.txt  hugin-2010.0.0.txt  hugin-2010.0.0_rc1.txt  hugin-2010.2.0.txt  hugin-2010.2.0_beta1.txt  hugin-2010.2.0_beta2.txt  hugin-2010.2.0_rc1.txt  hugin-2010.2.0_rc2.txt  hugin-2010.4.0.txt  hugin-2010.4.0_beta1.txt  hugin-2010.4.0_beta2.txt  hugin-2010.4.0_rc1.txt  hugin-2010.4.0_rc2.txt  hugin-2010.4.0_rc3.txt  hugin-2011.0.0.txt  hugin-2011.0.0_beta1.txt  hugin-2011.0.0_beta2.txt  hugin-2011.0.0_beta3.txt  hugin-2011.0.0_rc1.txt  hugin-2011.0.0_rc2.txt  hugin-2011.2.0.txt  hugin-2011.2.0_beta1.txt  hugin-2011.2.0_beta2.txt  hugin-2011.2.0_rc1.txt  hugin-2011.2.0_rc2.txt  hugin-2011.2.0_rc3.txt  hugin-2011.2.0_rc4.txt  hugin-2011.2.0_rc5.txt  hugin-2011.4.0.txt  hugin-2012.0.0.txt  hugin-2013.0.0.txt  hugin-2014.0.0.txt
libpanomatic/keypoints/: CMakeLists.txt  keypoints.cpp
libpanomatic/localfeatures/: BoundedSet.h  CMakeLists.txt  CircularKeyPointDescriptor.h  Homography.h  Image.h  KeyPoint.h  KeyPointIO.h  RansacFiltering.h
src/: .cvsignore  CMakeLists.txt  CMakeLists.txt~  CPEditor.cpp  CPEditor.h  CPImageDisplay.cpp  CPImageDisplay.h  CPListView.cpp  CPListView.h  Command.cpp  Command.h  CommandHistory.h  Doxyfile  Hugin.sln  ImageTransforms.h  InputImages.cpp  InputImages.h  LensDialog.cpp  LensDialog.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.am  Makefile.cvs  Makefile.in  OptimizerVarWidget.cpp  OptimizerVarWidget.h  PanoOptionsWidget.cpp  PanoOptionsWidget.h  QTImageCache.h  compile-mingw.sh  hugin.pro  hugin.rc  hugin_config.h.in  hugin_config.h.in.cmake  hugin_config_mac.h  hugin_config_mac_python.h  hugin_config_msvc.h  hugin_shared.h  hugin_version.h.in.cmake  (+4 more)
src/PTBatcher/: Batch.cpp  Batch.h  CMakeLists.txt  PTBatcher.cpp  PTBatcher.desktop  PTBatcher.h  PTBatcher_rc.rc  ProjectArray.cpp  ProjectArray.h  RunStitchFrame.cpp  RunStitchFrame.h
src/PTBatcherGUI/: BatchFrame.cpp  BatchFrame.h  CMakeLists.txt  DirTraverser.h  PTBatcherGUI.cpp  PTBatcherGUI.desktop  PTBatcherGUI.h  ProjectListBox.cpp  ProjectListBox.h
src/PanoImage/: .cvsignore  PanoImage.html  client.cpp  client.h  control_.xpm  filter.h  formats.h  mainframe.cpp  mainframe.h  makefile.g95  makefile.unx  makefile.unx.tmpl  panolib.cpp  panorama.h  panoviewer.cpp  panoviewer.h  panoviewerapp.cpp  panoviewerapp.h  panoviewextractor.cpp  panoviewextractor.h  printerror.cpp  utils.cpp  utils.h  version.h
src/Panorama/: .cvsignore  ImageGraph.cpp  Makefile  Makefile.am  Makefile.in  OptimizeOptions.cpp  PTOptimise.cpp  PanoCommand.h  PanoImage.cpp  PanoImage.h  PanoToolsInterface.cpp  Panorama.cpp  Panorama.h  Panorama.pro  Panorama.vcproj  PanoramaMemento.cpp  PhaseCorrelation.cpp  PhotometricOptimizer.cpp  Process.cpp  SpaceTransform.cpp  Stitcher.cpp  Stitcher1.cpp  Stitcher2.cpp  Stitcher3.cpp  Stitcher4.cpp  main.cpp  utils.cpp
src/build_msvc/: .cvsignore  Hugin.sln  copy_common.bat  hugin_msvc_install.bat  hugin_msvc_install_win98.bat
src/celeste/: CMakeLists.txt  Celeste.cpp  Celeste.h  CelesteDebug.cpp  CelesteDebug.h  CelesteGlobals.cpp  CelesteGlobals.h  Config.h  Config.h.linux  Config.h.win32  ContrastFilter.cpp  ContrastFilter.h  Gabor.cpp  Gabor.h  GaborFilter.cpp  GaborFilter.h  GaborGlobal.h  GaborJet.cpp  GaborJet.h  ImageFile.cpp  ImageFile.h  LogPolar.cpp  LogPolar.h  Main.cpp  PGMImage.cpp  PGMImage.h  Utilities.cpp  Utilities.h  svm.cpp  svm.h
src/common/: .cvsignore  Makefile  Makefile.am  Makefile.in  PTLensDB.c  common.vcproj  eig_jacobi.cpp  graph.cpp  lu.c  utils.cpp
src/data/: about.htm
src/deghosting/: CMakeLists.txt  README.txt  algtinyvector.h  deghosting.cpp  deghosting.h  deghosting_mask.cpp  denoise.h  hugin_hdrmerge.cpp  jbu.cpp  jbu.h  khan.cpp  khan.h  khanSupport.cpp  support.h  threshold.h
src/dox/: folder.dox  footerFile  headerFile  introduction.dox  mainpage.dox
src/foreign/: .cvsignore  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile.am  Makefile.in
src/hsi/: CMakeLists.txt  README.hsi  demo_plugin.py  hpi.cpp  hpi.h  hpi.py  hpi_classes.h  hsi.cpp  hsi.i  hsiPYTHON_wrap.cxx  mktar  preprocess.cmake
src/hugin/: .cvsignore  AssistantPanel.cpp  AutoCtrlPointCreator.cpp  CMakeLists.txt  CPEditorPanel.cpp  CPEditorPanelHandler.cpp  CPEditorTest.cpp  CPFineTuneFrame.cpp  CPImageCtrl.cpp  CPListFrame.cpp  CPZoomDisplayPanel.cpp  CommandHistory.cpp  CropPanel.cpp  Events.cpp  HFOVDialog.cpp  ImageCache.cpp  ImageCenter.cpp  ImageOrientationFrame.cpp  ImageOrientationPanel.cpp  ImageProcessing.cpp  ImagesList.cpp  ImagesPanel.cpp  ImgScrollWindow.cpp  LensPanel.cpp  List.cpp  LocalizedFileTipProvider.cpp  MainFrame.cpp  Makefile  Makefile.am  Makefile.in  MyExternalCmdExecDialog.cpp  MyProgressDialog.cpp  NonaStitcherPanel.cpp  OptimizeFrame.cpp  PTWXDlg.cpp  (+25 more)
(+2618 files in other folders)
